# Programming

./: README.md
Bash/: magic-Witekio.sh  magic.sh  utils.sh
C++/: .gitignore  CMakeLists.txt  Makefile  main.cpp  package.json
C++/Qt/Tutorial/Ex1/HelloWorld/: main.cpp
C++/Technologies/Protobuf/: Makefile
C++/include/: CEnemy.h  CRegex.h  CString.h  HLT_CAppProperties.h  HLT_CConfigFileManager.h  HLT_Cprocess.h  HLT_UsbServiceControl.h  HLT_crypto.h  HLT_shell_utils.h  HLT_utils.h  file.h
C++/secret/: secret.bin.aes
C++/src/: CEnemy.cpp  CRegex.cpp  CString.cpp  HLT_CAppProperties.cpp  HLT_CConfigFileManager.cpp  HLT_Cprocess.cpp  HLT_UsbServiceControl.cpp  HLT_crypto.cpp  HLT_shell_utils.cpp  file.cpp
C++/tmp/: HLT_conf.ini  test-bash.sh
C++/tmp/secret/: secret.bin.plaintext
Frameworks/Qt/Tutorial/Ex1/HelloWorld/: CMakeLists.txt
Java/: .gitignore  Java.md
Java/ByteShortInt/src/com/company/: Main.java
Java/Classes/: .project
Java/Hamburger/src/com/minhduc/: Hamburger.java  HealthyBurger.java  Main.java
Java/HelloWorld/src/: Hello.java
Java/HelloWorldDIY/: Helloworld.java
Java/IfThenElse/src/com/timbuchalka/: Main.java
Java/SampleCodingExercise/src/: BarkingDog.java  LeapYear.java  Main.java  MegaBytesConverter.java  SpeedConverter.java
Notes/: GitTutorial.md  Linux.md
Notes/Archive/: BLE5.md  Haulotte.md  Introduction_to_IoT.md  NodeJS.md  OpenSSL_Compilation.md  TGU.md
Notes/Archive/Simplicity Studio/: Dev_Carte.md  How to create new project in SimStudio.md
Python/: auto-tests.py  list_tgu.txt  main.py  test-azure.py  test_root_passwd.py  version.py
(+26 files in other folders)
